feat: minor change in UI and add seriesOrder field to reorder the article by this field

--- a/data/blog/dimensional-part-1.mdx
+++ b/data/blog/dimensional-part-1.mdx
@@ -1,11 +1,12 @@
 ---
-title: "Dimensional Modeling - Part 1: Basic Fact Table Techniques"
+title: 'Dimensional Modeling - Part 1: Basic Fact Table Techniques'
 date: '2023-04-02'
 tags: ['Data Warehouse', 'Database']
 draft: false
 summary: 'In this article, I will introduce the concept of the Basic Fact table in Dimensional data modeling. To understand this technique, we will explore the different types of data modeling and recap some fundamental knowledge, including the star and snowflake schemas, and the concepts of normalization.'
 image: '/static/images/resource/dimensional-part-1/thumbnail.jpg'
 series: 'Database & Data Engineering'
+seriesOrder: 2
 ---
 
 <TOCInline toc={props.toc} asDisclosure toHeading={3} />
@@ -16,7 +17,7 @@ In this article, I will introduce the concept of the **Basic Fact table** in Dim
 
 ![overview](/static/images/resource/dimensional-part-1/Fig0.png)
 
-<p style={{ textAlign: "center" }}>**Fig 1.** Data modeling overview</p>
+<p style={{ textAlign: 'center' }}>**Fig 1.** Data modeling overview</p>
 
 ## 2. What is data modeling
 
@@ -24,7 +25,7 @@ In this article, I will introduce the concept of the **Basic Fact table** in Dim
 
 ![three-level-of-data-modeling](/static/images/resource/dimensional-part-1/Fig1.png)
 
-<p style={{ textAlign: "center" }}>**Fig 2.** Three level of data modeling</p>
+<p style={{ textAlign: 'center' }}>**Fig 2.** Three level of data modeling</p>
 
 There are three different levels of data modeling: conceptual data models, logical data models, and physical data models.
 
@@ -32,13 +33,13 @@ There are three different levels of data modeling: conceptual data models, logic
 - **A logical data model** builds on the conceptual model by **providing a more detailed overview of the entities in their respective relationships**. It identifies the attributes of each entity, defines the primary keys, and specifies the foreign keys. The logical data model serves as an intermediary between the high-level conceptual model and the physical implementation. It describes how the data will be organized in the database and provides a blueprint for building the physical database.
 - **A physical data model** is used to create the **schema** of the database, which is then implemented in the database management system. The physical data model defines the structure of the database, including the data types, constraints, and attributes. It specifies how the data will be stored in the specific database management system being used.
 
-In conclusion,  a **conceptual data model** is a high-level view of the database that is used to communicate with stakeholders about the requirements of the database. The **conceptual data model** can then be used to create a **logical data model**, which is a more detailed view of the database that includes the relationships between entities, and the constraints and rules that apply to the data. Finally, the **logical data model** can be used to create **a physical data model**, which is the actual database schema that is implemented in a database management system.
+In conclusion, a **conceptual data model** is a high-level view of the database that is used to communicate with stakeholders about the requirements of the database. The **conceptual data model** can then be used to create a **logical data model**, which is a more detailed view of the database that includes the relationships between entities, and the constraints and rules that apply to the data. Finally, the **logical data model** can be used to create **a physical data model**, which is the actual database schema that is implemented in a database management system.
 
 ## 3. Types of data modeling
 
 ![common-types-of-data-modeling](/static/images/resource/dimensional-part-1/Fig2.png)
 
-<p style={{ textAlign: "center" }}>**Fig 3.** Common types of data modeling</p>
+<p style={{ textAlign: 'center' }}>**Fig 3.** Common types of data modeling</p>
 
 #### 3.1. Relational data model
 
@@ -46,7 +47,9 @@ The relational data model is based on the idea that data is stored in tables wit
 
 ![relation-data-model](/static/images/resource/dimensional-part-1/Fig3.png)
 
-<p style={{ textAlign: "center" }}>**Fig 4**: Relational data model [[2]](https://www.guru99.com/relational-data-model-dbms.html)</p>
+<p style={{ textAlign: 'center' }}>
+  **Fig 4**: Relational data model [[2]](https://www.guru99.com/relational-data-model-dbms.html)
+</p>
 
 #### 3.2. Entity Relationship model
 
@@ -56,17 +59,20 @@ The ER model is based on the concept of a real-world entity, such as a person, p
 
 ![er-diagram](/static/images/resource/dimensional-part-1/Fig4.png)
 
-<p style={{ textAlign: "center" }}>**Fig 5.** Entity Relationship diagram (Refer the conventions for diagramming in [[3]](https://www.lucidchart.com/pages/er-diagrams)</p>
+<p style={{ textAlign: 'center' }}>
+  **Fig 5.** Entity Relationship diagram (Refer the conventions for diagramming in
+  [[3]](https://www.lucidchart.com/pages/er-diagrams)
+</p>
 
 For example, in a university database, a student is an entity, with attributes like ID, name, and group id, and relationships with other entities like teacher, subject, and other students (ex: same group).
 
 #### 3.3. Hierarchical data model
 
-The hierarchical data model is typically used to represent data that has a strict parent-child relationship, such as the organization of a company or the structure of a file system. It is often used in mainframe and legacy systems. 
+The hierarchical data model is typically used to represent data that has a strict parent-child relationship, such as the organization of a company or the structure of a file system. It is often used in mainframe and legacy systems.
 
-![hierarchical](/static/images/resource/dimensional-part-1/Fig17.jpeg) 
+![hierarchical](/static/images/resource/dimensional-part-1/Fig17.jpeg)
 
-<p style={{ textAlign: "center" }}>**Fig 6.** Hierarchical data model)</p>
+<p style={{ textAlign: 'center' }}>**Fig 6.** Hierarchical data model)</p>
 
 The major disadvantage of hierarchical databases is their **inflexible nature**. The one-to-many structure is not ideal for complex structures as it cannot describe relationships in which each child node has multiple parents nodes. [[4]](https://www.heavy.ai/technical-glossary/hierarchical-database)
 
@@ -78,7 +84,10 @@ Object-oriented data model is a conceptual data model that is designed to repres
 
 ![oop](/static/images/resource/dimensional-part-1/Fig5.svg)
 
-<p style={{ textAlign: "center" }}>**Fig 7.** Object Oriented and Relational data mode [[5]](https://www.mongodb.com/document-databases)</p>
+<p style={{ textAlign: 'center' }}>
+  **Fig 7.** Object Oriented and Relational data mode
+  [[5]](https://www.mongodb.com/document-databases)
+</p>
 
 MongoDB is one of the popular NoSQL databases that is particularly well-suited to storing and querying complex, nested data structures that are common in object-oriented data modeling. It is a document-based database that allows data to be stored in flexible, JSON-like documents, making it an ideal choice for developers who work with object-oriented data models. MongoDB provides features such as document storage, indexing, and querying, and allows for the storage of complex objects with nested structures.
 
@@ -96,7 +105,7 @@ Normalization is the process of structuring tables to resolve anomalies such as 
 
 ![normalization](/static/images/resource/dimensional-part-1/Fig7.png)
 
-<p style={{ textAlign: "center" }}>**Fig 9.** Overview of Normalization</p>
+<p style={{ textAlign: 'center' }}>**Fig 9.** Overview of Normalization</p>
 
 1. **First Normal Form (1NF)** - This level focuses on data atomicity by ensuring that multiple fields are not used to store similar data in a single table.
 2. **Second Normal Form (2NF)** - This level fixes relationships built on functional dependencies by ensuring that records depend only on a table's primary key.
@@ -108,15 +117,20 @@ Each level builds on the previous one and helps to ensure that the database is f
 
 ![start and snowflake schema](/static/images/resource/dimensional-part-1/Fig8.png)
 
-<p style={{ textAlign: "center" }}>**Fig 10.** Star and Snowflake Schema [[7]](%5BDimensional%20Modeling%5D%20Part%201%20Fundamental%20Concepts%20c326fbab131a43369359a38f7b627146.md)</p>
+<p style={{ textAlign: 'center' }}>
+  **Fig 10.** Star and Snowflake Schema
+  [[7]](%5BDimensional%20Modeling%5D%20Part%201%20Fundamental%20Concepts%20c326fbab131a43369359a38f7b627146.md)
+</p>
 
-Star and snowflake schemas are two common dimensional data models used in dimensional modeling approach. 
+Star and snowflake schemas are two common dimensional data models used in dimensional modeling approach.
 
 A **star schema** consists of a central fact table connected to multiple dimension tables, forming a star shape. The dimension tables contain descriptive attributes related to the fact table's measures. In contrast, a **snowflake schema** has **normalized** dimension tables with hierarchical relationships, leading to a more complex structure. Both schemas have their advantages and disadvantages, with the choice often depending on the specific requirements of the system and the trade off between query performance and storage efficiency.
 
 ![diff between start and snowflake schema](/static/images/resource/dimensional-part-1/Fig9.png)
 
-<p style={{ textAlign: "center" }}>**Fig 11.** Difference between **star** and **snowflake schema**</p>
+<p style={{ textAlign: 'center' }}>
+  **Fig 11.** Difference between **star** and **snowflake schema**
+</p>
 
 ## 6. Types of fact tables
 
@@ -124,7 +138,7 @@ A **fact table** is a fundamental table in a dimensional data model that stores 
 
 ![types of facts](/static/images/resource/dimensional-part-1/Fig10.png)
 
-<p style={{ textAlign: "center" }}>**Fig 12.** Types of fact tables</p>
+<p style={{ textAlign: 'center' }}>**Fig 12.** Types of fact tables</p>
 
 There are three types of facts:
 
@@ -149,7 +163,7 @@ For example, each time we make a transaction action by pressing **PLACE ORDER**,
 
 ![transaction fact table](/static/images/resource/dimensional-part-1/Fig11.png)
 
-<p style={{ textAlign: "center" }}>**Fig 13.** Transaction Fact Tables</p>
+<p style={{ textAlign: 'center' }}>**Fig 13.** Transaction Fact Tables</p>
 
 Characteristics of transaction fact table
 
@@ -157,7 +171,6 @@ Characteristics of transaction fact table
 - Mostly **additive fact**
 - **Largest** database size
 - **Highly** need for **aggregate** tables
-
 
 #### 6.2. Periodic Fact Tables
 
@@ -167,7 +180,7 @@ For example, the periodic fact table will be **INSERT** a new row aggregated in 
 
 ![periodic](/static/images/resource/dimensional-part-1/Fig12.png)
 
-<p style={{ textAlign: "center" }}>**Fig 14.** Periodic Fact Tables</p>
+<p style={{ textAlign: 'center' }}>**Fig 14.** Periodic Fact Tables</p>
 
 Characteristics of periodic fact table
 
@@ -184,7 +197,7 @@ For example: when we PLACE ORDER, it will **INSERT** a new row to record the Ord
 
 ![accumulating](/static/images/resource/dimensional-part-1/Fig13.png)
 
-<p style={{ textAlign: "center" }}>**Fig 15.** Accumulating snapshot fact tables</p>
+<p style={{ textAlign: 'center' }}>**Fig 15.** Accumulating snapshot fact tables</p>
 
 Characteristics of Accumulating snapshot fact table
 
@@ -196,27 +209,30 @@ Characteristics of Accumulating snapshot fact table
 
 *Factless fact tables* can also be used to analyze what didn’t happen. These queries always have two parts: a factless coverage table that contains all the possibilities of events that might happen and an activity table that contains the events that did happen. When the activity is subtracted from the coverage, the result is the set of events that did not happen. [[8]](https://www.kimballgroup.com/data-warehouse-business-intelligence-/static/images/resources/kimball-techniques/dimensional-modeling-techniques/factless-fact-table/)
 
-A **factless fact** table doesn't include any measure columns. It contains only dimension keys. 
+A **factless fact** table doesn't include any measure columns. It contains only dimension keys.
 
-For example: To answer the question that *“What Products were on **promotion** but did not **sell**?.* We will have list of products **sold** (**Sell**), *illustrated* as **Fig 16** and list of products that were on **promotion** on a given day which called factless fact table (*Promotion), illustrated* as **Fig 17.**
+For example: To answer the question that _“What Products were on **promotion** but did not **sell**?._ We will have list of products **sold** (**Sell**), _illustrated_ as **Fig 16** and list of products that were on **promotion** on a given day which called factless fact table (_Promotion), illustrated_ as **Fig 17.**
 
 ![fact sales](/static/images/resource/dimensional-part-1/Fig14.png)
 
-<p style={{ textAlign: "center" }}>**Fig 16:** Fact Sales (***Sell***) - List of products sold</p>
+<p style={{ textAlign: 'center' }}>**Fig 16:** Fact Sales (***Sell***) - List of products sold</p>
 
 ![fact promotion](/static/images/resource/dimensional-part-1/Fig15.png)
 
-<p style={{ textAlign: "center" }}>**Fig 17:** Fact Promotion (***Promotion***) - List of products that were on promotion on a given day</p>
+<p style={{ textAlign: 'center' }}>
+  **Fig 17:** Fact Promotion (***Promotion***) - List of products that were on promotion on a given
+  day
+</p>
 
-Therefore, *Product were on promotion **but** did not sell* 
+Therefore, _Product were on promotion **but** did not sell_
 
-*= Promotion - (Promotion ∩ Sell)* 
+_= Promotion - (Promotion ∩ Sell)_
 
-*= Promotion - Sell*
+_= Promotion - Sell_
 
 ![venn-diagram](/static/images/resource/dimensional-part-1/Fig16.png)
 
-<p style={{ textAlign: "center" }}>**Fig 18:**  Venn Diagram to describe factless fact table</p>
+<p style={{ textAlign: 'center' }}>**Fig 18:** Venn Diagram to describe factless fact table</p>
 
 ## 7. Reference
 
